@@ -690,6 +690,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-6576. Datanode log is generating at root directory in security mode
     (surendra singh lilhore via vinayakumarb)
 
+    HDFS-3384. DataStreamer thread should be closed immediatly when failed to
+    setup a PipelineForAppendOrRecovery (Uma Maheswara Rao G via vinayakumarb)
+
 Release 2.7.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
